fix many bugs and horizontal scrollbar support

--- a/assets/examples/base.css
+++ b/assets/examples/base.css
@@ -45,5 +45,5 @@ body {
     display: flex;
     flex-direction: column;
     overflow-y: scroll;
-    overflow-x: hidden;
+    overflow-x: scroll;
 }
